--- a/hidden_voices_backend/requirements.txt
+++ b/hidden_voices_backend/requirements.txt
@@ -1,6 +1,7 @@
 beautifulsoup4==4.12.0
 Django==4.1
 djangorestframework==3.14.0
+django-cors-headers==4.0.0
 fake_useragent==1.1.1
 google==3.0.0
 google_search_results==2.4.1
